--- a/README.mb
+++ b/README.mb
@@ -1,8 +1,7 @@
-# MyFS 1.0
 
 **MyFS** - это консольное приложение на Java для управления файлами и директориями. Оно поддерживает выполнение различных команд для работы с файлами и каталогами.
 
-## Функционал
+### Функционал
 
 Программа предоставляет следующие команды:
 
@@ -19,7 +18,7 @@
 - `help`: Выводит список всех команд и их описание.
 - `exit`: Завершает работу программы.
 
-## Как использовать
+### Как использовать
 
 1. Скомпилируйте проект:
    ```bash
